force-app/main/default/objects/Insight__c/Insight__c.object-meta.xml
<CustomObject>
    <description>SFP-6393 - This object reflects the Insights that are coming from the Akili engine into Salesforce.</description>
    <label>Insight</label>
    <nameField>
        <displayFormat>AI-{00000000}</displayFormat>
        <label>Insight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insights</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>