force-app/main/default/objects/Insight__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>SFP-6393 - The category of the insight as received from the Akili Engine</description>
    <inlineHelpText>The Akili engine will set the category and sub category (Smart Lead Gen, Early Warning System, One Detect, FX Tips, Working Capital Triggers)</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>