force-app/main/default/objects/Insight__c/fields/CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>CIF_Number__c</fullName>
    <formula>Client__r.CIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CIF Number</label>
    <type>Text</type>
</CustomField>