force-app/main/default/objects/Insight__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the name of the client to which the Insight is made for.</description>
    <inlineHelpText>The client linked to this Insight</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insights</relationshipLabel>
    <relationshipName>Client_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>