force-app/main/default/objects/Insight__c/fields/Client_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Client_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Insights</relationshipName>
    <type>Lookup</type>
</CustomField>