force-app/main/default/objects/Insight__c/fields/Client_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Client_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field represents the banker that is coordinating for the client.</description>
    <inlineHelpText>Person that is responsible for the management of the overall relationship with a Client. Client Coordinator changes can only be facilitated by an administrator.</inlineHelpText>
    <label>Client Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClientCoordinator_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>