force-app/main/default/objects/Insight__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Additional notes made by users regarding an Insight</description>
    <inlineHelpText>Additional thoughts regarding this Insight captured by users</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>