force-app/main/default/objects/Insight__c/fields/Expiring_Soon__c.field-meta.xml
<CustomField>
    <fullName>Expiring_Soon__c</fullName>
    <formula>Expiry_Date__c =  TODAY() || Expiry_Date__c = TODAY() + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiring Soon</label>
    <type>Checkbox</type>
</CustomField>