force-app/main/default/objects/Insight__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>This field represents the Expiry Date of an insight i.e when an insight becomes invalid.</description>
    <inlineHelpText>The date this insight expires.</inlineHelpText>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>