force-app/main/default/objects/Insight__c/fields/External_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Lead_ID__c</fullName>
    <description>This field represents the identifier of where this insight was generated.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifier of where this insight was generated.</inlineHelpText>
    <label>External Lead ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>