force-app/main/default/objects/Insight__c/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <description>This field refers to the country of the external system</description>
    <inlineHelpText>Country of the external system</inlineHelpText>
    <label>External System Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Nigeria</fullName>
            </value>
            <value>
                <fullName>South Africa</fullName>
                <default>true</default>
                <label>South Africa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>