force-app/main/default/objects/Insight__c/fields/External_System_Code__c.field-meta.xml
<CustomField>
    <fullName>External_System_Code__c</fullName>
    <description>This field refers to the External System Code</description>
    <inlineHelpText>External System Code</inlineHelpText>
    <label>External System Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>