force-app/main/default/objects/Insight__c/fields/External_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_ID__c</fullName>
    <description>This field refers to the unique ID of the external system</description>
    <displayFormat>IBM-Akili {00000000}</displayFormat>
    <inlineHelpText>External System Unique ID</inlineHelpText>
    <label>External Unique ID</label>
    <type>AutoNumber</type>
</CustomField>