force-app/main/default/objects/Insight__c/fields/Insight__c.field-meta.xml
<CustomField>
    <fullName>Insight__c</fullName>
    <description>This field refers to the actual details of the insight.</description>
    <inlineHelpText>Details of the actual insight from Akili.</inlineHelpText>
    <label>Insight</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>