force-app/main/default/objects/Insight__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <description>Indicates whether an Insight is expired or not</description>
    <formula>TODAY() &gt;  Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the Insight expired?</inlineHelpText>
    <label>Is Expired?</label>
    <type>Checkbox</type>
</CustomField>