force-app/main/default/objects/Insight__c/fields/Is_Provided_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Is_Provided_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFP-10623  An Indicator to show if insight has been action with Feedback functionality</description>
    <label>Is Provided Feedback?</label>
    <type>Checkbox</type>
</CustomField>