force-app/main/default/objects/Insight__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an Insight is public or not</description>
    <inlineHelpText>If an insight is public then everyone can see it</inlineHelpText>
    <label>Is Public?</label>
    <type>Checkbox</type>
</CustomField>