force-app/main/default/objects/Insight__c/fields/Is_Snoozed__c.field-meta.xml
<CustomField>
    <fullName>Is_Snoozed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an insight is snoozed or not</description>
    <inlineHelpText>Is the Insight snoozed</inlineHelpText>
    <label>Is Snoozed?</label>
    <type>Checkbox</type>
</CustomField>