force-app/main/default/objects/Insight__c/fields/Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Date__c</fullName>
    <description>This refers to the date the insight was created in Akili</description>
    <inlineHelpText>The date the insight was created in Akili</inlineHelpText>
    <label>Lead Date</label>
    <type>Date</type>
</CustomField>