force-app/main/default/objects/Insight__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>This field refers to the next steps that need to be followed in order to action the insight.</description>
    <inlineHelpText>The next steps that need to be followed in order to action the insight.</inlineHelpText>
    <label>Next Steps</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>