force-app/main/default/objects/Insight__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field refers to the opportunity for this insight</description>
    <inlineHelpText>Opportunity for this insight.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Insights</relationshipLabel>
    <relationshipName>Opportunity_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>