force-app/main/default/objects/Insight__c/fields/Potential_Insight_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Potential_Insight_Revenue__c</fullName>
    <label>Potential Insight Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>