force-app/main/default/objects/Insight__c/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InsightsOfPreviousOwner</relationshipName>
    <type>Lookup</type>
</CustomField>