force-app/main/default/objects/Insight__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>The sub-category of the Insight (i.e FX client execution type etc)</description>
    <inlineHelpText>The sub-category of the Insight (i.e FX client execution type etc)</inlineHelpText>
    <label>Sub-Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>