force-app/main/default/objects/Insight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Client__c</columns>
    <columns>Insight__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Potential_Insight_Revenue__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>External_Lead_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client_Coordinator__c</columns>
    <columns>Client_Analyst__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>