force-app/main/default/objects/Insight__c/listViews/My_Insights.listView-meta.xml
<ListView>
    <fullName>My_Insights</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Insights</label>
</ListView>